--- a/config/in-local.yaml
+++ b/config/in-local.yaml
@@ -1,7 +1,7 @@
 mode: debug
 mysql:
   dsn: >-
-    ${MYSQL_USERNAME}:${MYSQL_PASSWORD}@tcp(${MYSQL_HOST}:${MYSQL_PORT})/${MYSQL_DB}?charset=utf8&parseTime=True&loc=Local
+    root:123456@tcp(127.0.0.1:3306)/auth?charset=utf8&parseTime=True&loc=Local
   pool:
     min: 5
     max: 20
